<resources>
  <string name="app_name">EarthQuake</string>

  <string name="quake_4.5_hour_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/4.5_hour.quakeml</string>
  <string name="quake_2.5_hour_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_hour.quakeml</string>
  <string name="quake_1.0_hour_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/1.0_hour.quakeml</string>
  <string name="quake_all_hour_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.quakeml</string>
  <string name="quake_4.5_day_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/4.5_day.quakeml</string>
  <string name="quake_2.5_day_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_day.quakeml</string>
  <string name="quake_1.0_day_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/1.0_day.quakeml</string>
  <string name="quake_all_day_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_day.quakeml</string>
  <string name="quake_4.5_week_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/4.5_week.quakeml</string>
  <string name="quake_2.5_week_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_week.quakeml</string>
  <string name="quake_1.0_week_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/1.0_week.quakeml</string>
  <string name="quake_all_week_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_week.quakeml</string>
  <string name="quake_4.5_month_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/4.5_month.quakeml</string>
  <string name="quake_2.5_month_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_month.quakeml</string>
  <string name="quake_1.0_month_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/1.0_month.quakeml</string>
  <string name="quake_all_month_feed">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_month.quakeml</string>

  <string name="menu_update">Refresh Earthquakes</string>
  <string name="menu_preferences">Preferences</string>
  <string name="menu_refresh">Refresh</string>
  <string name="menu_search">Search</string>

  <string name="auto_update_prompt">Auto Update?</string>
  <string name="update_freq_prompt">Update Frequency</string>
  <string name="min_quake_mag_prompt">Minimum Quake Magnitude</string>

  <string name="search_description">Search Earthquake Locations</string>

  <string name="quake_details">Quake Details</string>

  <string name="details_date">Date</string>
  <string name="details_magnitude">Magnitude</string>
  <string name="details_details">Details</string>
  <string name="details_latitude">Latitude</string>
  <string name="details_longitude">Longitude</string>
  <string name="details_depth">Depth</string>

  <string name="tab_list">List</string>
  <string name="tab_map">Map</string>

  <string name="google_maps_v2_not_available">Google Maps V2 not available</string>
  <string name="google_play_services_out_of_date">Google Play services out of date</string>

  <string name="un">UN</string>
  <string name="united_nations">United Nations</string>
  <string name="lincoln_center">Lincoln Center</string>
  <string name="lincoln_center_snippet">Home of Jazz at Lincoln Center</string>
  <string name="carnegie_hall">Carnegie Hall</string>
  <string name="practice_x3">Where you go with practice, practice, practice</string>
  <string name="downtown_club">The Downtown Club</string>
  <string name="heisman_trophy">Original home of the Heisman Trophy</string>

  <string name="map_marker_icon">"Icon"</string>
  <string name="map_marker_image_url">http://misc.commonsware.com/mapsv2</string>

  <string name="pref_all_magnitude_value">-1</string>

  <string name="pref_today_records_value">-1</string>
  <string name="pref_yesterday_records_value">-2</string>
  <string name="pref_last_week_records_value">-3</string>
  <string name="pref_last_month_records_value">-4</string>
  <string name="pref_last_quarter_records_value">-5</string>
  <string name="pref_last_half_year_records_value">-6</string>
  <string name="pref_last_year_records_value">-7</string>
  <string name="pref_all_records_value">0</string>

  <string name="pref_clustering_color_value">Mean</string>

  <string name="pref_map_max_zoom_value">-1</string>
  <string name="pref_map_auto_zoom_value">-2</string>

  <string name="last_earthquake_widget_label">Last earthquake</string>
  <string name="earthquakes_widget_label">Earthquakes</string>

  <string name="widget_magnitude_empty_value">---</string>
  <string name="widget_details_empty_value">Details Unknown</string>
  <string name="widget_date_empty_value">---</string>
  <string name="widget_list_empty_value">No earthquakes</string>
</resources>
