<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

  <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"/>

  <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="4"
              android:padding="10dp"
              android:text="@string/details_date"/>

    <TextView android:id="@+id/details_date"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="2"
              android:padding="10dp"/>
  </LinearLayout>

  <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="4"
              android:padding="10dp"
              android:text="@string/details_details"/>

    <TextView android:id="@+id/details_details"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="2"
              android:padding="10dp"/>
  </LinearLayout>

  <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="4"
              android:padding="10dp"
              android:text="@string/details_magnitude"/>

    <TextView android:id="@+id/details_magnitude"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="2"
              android:padding="10dp"/>
  </LinearLayout>

  <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="4"
              android:padding="10dp"
              android:text="@string/details_latitude"/>

    <TextView android:id="@+id/details_latitude"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="2"
              android:padding="10dp"/>
  </LinearLayout>

  <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="4"
              android:padding="10dp"
              android:text="@string/details_longitude"/>

    <TextView android:id="@+id/details_longitude"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="2"
              android:padding="10dp"/>
  </LinearLayout>

  <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="4"
              android:padding="10dp"
              android:text="@string/details_depth"/>

    <TextView android:id="@+id/details_depth"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="2"
              android:padding="10dp"/>

  </LinearLayout>

</LinearLayout>